@@ -17,10 +17,27 @@ class SearchApiRelationship extends RelationshipPluginBase {
   /**
    * {@inheritdoc}
    */
+  protected function defineOptions() {
+    $options = parent::defineOptions();
+    $options['skip_access']['default'] = FALSE;
+    return $options;
+  }
+
+  /**
+   * {@inheritdoc}
+   */
   public function buildOptionsForm(&$form, FormStateInterface $form_state) {
     parent::buildOptionsForm($form, $form_state);
 
     $form['required']['#access'] = FALSE;
+
+    $form['skip_access'] = array(
+      '#type' => 'checkbox',
+      '#title' => $this->t('Skip access checks'),
+      '#description' => $this->t('Do not verify that the user has access to the entities referenced through this relationship. This will allow you to display data to the user to which they normally would not have access. This should therefore be used with care.'),
+      '#default_value' => $this->options['skip_access'],
+      '#weight' => -1,
+    );
   }
 
   /**
